--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "gatsby-plugin-offline": "^3.0.9",
     "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-sharp": "^2.2.25",
+    "gatsby-plugin-transition-link": "^1.13.0",
     "gatsby-source-filesystem": "^2.1.26",
     "gatsby-transformer-csv": "^2.0.0",
     "gatsby-transformer-sharp": "^2.2.17",
+    "gsap": "^2.1.3",
     "papaparse": "^5.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
